--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
     "phpstan/phpstan-phpunit": "^1.3"
   },
   "scripts": {
-    "analyse": "vendor/bin/phpstan",
+    "analyse": "vendor/bin/phpstan analyse",
     "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes",
     "test": "vendor/bin/pest"
   },
