--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     }
   },
   "require": {
-    "php": "^8.1"
+    "php": "^8.1",
+    "cslant/lark-git-notifier": "dev-main"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^v3.37",
