--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
     }
   },
   "suggest": {
-    "cslant/laravel-telegram-git-notifier:" : "Send notification from Gitlab and Github events to Telegram"
+    "cslant/laravel-telegram-git-notifier": "Send notifications from Gitlab and Github events to Telegram"
   },
   "config": {
     "sort-packages": true,
